--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,18 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        file: ['foo.txt', 'bar.txt']
+        file:
+          - name: foo.txt
+          - name: bar.txt
     steps:
       - uses: actions/checkout@v3
 
       - run: |
-          echo "THIS HAS SOME DATA IN A FILE NAMED ${{ matrix.file }}" > ${{ matrix.file }}
-          tar -zcf ${{ matrix.file }}.tgz ${{ matrix.file }}
+          echo "THIS HAS SOME DATA IN A FILE NAMED ${{ matrix.file.name }}" > ${{ matrix.file.name }}
+          tar -zcf ${{ matrix.file.name }}.tgz ${{ matrix.file.name }}
 
       - uses: actions/upload-artifact@v3
         with:
           name: total
-          path: ${{ matrix.file }}.tgz
+          path: ${{ matrix.file.name }}.tgz
           retention-days: 1
 
   second:
