Always provide file

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: |
-          echo "THIS HAS SOME DATA IN A FILE NAMED ${{ matrix.file.name }}" > ${{ matrix.file.name }}.${{ matrix.file.ext }}
+          echo "THIS HAS SOME DATA IN A FILE NAMED ${{ matrix.file.name }}" > a${{ matrix.file.name }}.b${{ matrix.file.ext }}
 
           echo "Can I access data with depth? ${{ matrix.file.depth }}"
 
