--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,3 +40,9 @@ jobs:
       - id: outputs-raw-file
         run: echo $(./other-outputs.sh)
 
+      - run: |
+          echo "multiline = ${{ steps.outputs-echo-file.outputs.multiline }}"
+          echo "with-json = ${{ steps.outputs-echo-file.outputs.with-json }}"
+
+          echo "multiline-2 = ${{ steps.outputs-raw-file.outputs.multiline-2 }}"
+          echo "with-json-2 = ${{ steps.outputs-raw-file.outputs.with-json-2 }}"
