--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,10 @@
 name: Test
 on:
+  pull_request:
+    type:
+      - opened
+      - synchronize
+      - reopened
   push:
     branches-ignore:
       - gh-pages
