--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,4 +17,4 @@ jobs:
       - run: |
           echo HEAD === $(git rev-parse HEAD)
 
-          echo GITHUB CONTEXT === ${{{ toJSON(github) }}}
+          echo GITHUB CONTEXT === ${{ toJSON(github) }}
