Remove dist script references

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -143,7 +143,7 @@ jobs:
       - name: Check if package has changes
         id: rivendell
         run: |
-          CHANGED=`npx rivendell-dist changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
 
       - if: steps.rivendell.outputs.changed == 'true'
@@ -218,7 +218,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          HASH=`npx rivendell-dist hash ${{ matrix.package.name }}`
+          HASH=`npx rivendell hash ${{ matrix.package.name }}`
           echo "::set-output name=hash::${HASH}"
 
       # Try to load a previously cached version of build (determined by hash)
@@ -296,7 +296,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          HASH=`npx rivendell-dist hash ${{ matrix.package.name }}`
+          HASH=`npx rivendell hash ${{ matrix.package.name }}`
           echo "::set-output name=hash::${HASH}"
 
       # Try to load a previously cached version of build (determined by hash)
@@ -371,7 +371,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          HASH=`npx rivendell-dist hash ${{ matrix.package.name }}`
+          HASH=`npx rivendell hash ${{ matrix.package.name }}`
           echo "::set-output name=hash::${HASH}"
 
       # Try to load a previously cached version of build (determined by hash)
@@ -443,7 +443,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          HASH=`npx rivendell-dist hash ${{ matrix.package.name }}`
+          HASH=`npx rivendell hash ${{ matrix.package.name }}`
           echo "::set-output name=hash::${HASH}"
 
       # Try to load a previously cached version of build (determined by hash)
@@ -515,7 +515,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          HASH=`npx rivendell-dist hash ${{ matrix.package.name }}`
+          HASH=`npx rivendell hash ${{ matrix.package.name }}`
           echo "::set-output name=hash::${HASH}"
 
       # Try to load a previously cached version of build (determined by hash)
@@ -596,7 +596,7 @@ jobs:
 
       - name: Check if package has changes
         run: |
-          CHANGED=`npx rivendell-dist changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
         id: rivendell
 
@@ -643,7 +643,7 @@ jobs:
 
       - name: Check if package has changes
         run: |
-          CHANGED=`npx rivendell-dist changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
         id: rivendell
 
@@ -687,7 +687,7 @@ jobs:
 
       - name: Check if package has changes
         run: |
-          CHANGED=`npx rivendell-dist changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
         id: rivendell
 
@@ -728,7 +728,7 @@ jobs:
 
       - name: Check if package has changes
         run: |
-          CHANGED=`npx rivendell-dist changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
         id: rivendell
 
@@ -769,7 +769,7 @@ jobs:
 
       - name: Check if package has changes
         run: |
-          CHANGED=`npx rivendell-dist changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
+          CHANGED=`npx rivendell changed ${{ matrix.package.name }} ${{ inputs.base-ref }} ${{ inputs.head-ref }}`
           echo "::set-output name=changed::${CHANGED}"
         id: rivendell
 
