--- a/rivendell/.github/workflows/build-and-test.yaml
+++ b/rivendell/.github/workflows/build-and-test.yaml
@@ -139,7 +139,7 @@ jobs:
               tar -xf $TARBALL
             done
 
-          EXCLUDED=`find . -path "./packages/*" -not -path "./packages/*/**" -type d -execdir sh -c '[[ -d {}/dist ]]' \; -execdir sh -c 'echo --exclude ./packages/{}' \;`
+          EXCLUDED=`find . -path "./packages/*" -not -path "./packages/*/**" -type d -execdir sh -c 'test -d {}/dist' \; -execdir sh -c 'echo --exclude ./packages/{}' \;`
           tar -xf ./pre-build-tarball/pre-build.tgz $EXCLUDED
 
       # Generate a hash that specifies "state" of package + dependencies
@@ -209,7 +209,7 @@ jobs:
               tar -xf $TARBALL
             done
 
-          EXCLUDED=`find . -path "./packages/*" -not -path "./packages/*/**" -type d -execdir sh -c '[[ -d {}/dist ]]' \; -execdir sh -c 'echo --exclude ./packages/{}' \;`
+          EXCLUDED=`find . -path "./packages/*" -not -path "./packages/*/**" -type d -execdir sh -c 'test -d {}/dist' \; -execdir sh -c 'echo --exclude ./packages/{}' \;`
           tar -xf ./pre-build-tarball/pre-build.tgz $EXCLUDED
 
       - name: Check if package has changes
